Speech-to-Text and Bluemix Mobile analytics added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,13 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
+    compile 'com.squareup.okhttp3:okhttp-ws:3.4.2'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.ibm.watson.developer_cloud:conversation:3.5.3'
     compile 'com.ibm.watson.developer_cloud:text-to-speech:3.5.3'
-    compile 'com.ibm.watson.developer_cloud:android-sdk:0.2.1'
+    compile 'com.ibm.watson.developer_cloud:speech-to-text:3.5.3'
+    compile 'com.ibm.watson.developer_cloud:android-sdk:0.2.3'
+    compile 'com.ibm.mobilefirstplatform.clientsdk.android:analytics:1.+'
     testCompile 'junit:junit:4.12'
 
 }
