--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,19 @@ captures/
 # Keystore files
 *.jks
 src/main/res/drawable-w10dp/
+/_mac/
+/inspection/
+/androidEditors.xml
+/colors.scheme.xml
+/ignore.xml
+/web-browsers.xml
+/androidStudioFirstRun.xml
+/filetypes.xml
+/debugger.xml
+/diff.xml
+/IntelliLang.xml
+/ui.lnf.xml
+/gradle.run.settings.xml
+build
+chatbot-watson-android.iml
+local.properties
