--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "25.0.1"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.example.vmac.chatbot"
         minSdkVersion 21
@@ -31,14 +31,14 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.squareup.okhttp3:okhttp:3.8.0'
     compile 'com.squareup.okhttp3:okhttp-ws:3.4.2'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.ibm.watson.developer_cloud:conversation:3.8.0'
     compile 'com.ibm.watson.developer_cloud:text-to-speech:3.8.0'
-    compile 'com.ibm.watson.developer_cloud:speech-to-text:3.8.0'
+    compile 'com.ibm.watson.developer_cloud:speech-to-text:3.8.1-SNAPSHOT'
     compile 'com.ibm.watson.developer_cloud:android-sdk:0.2.3'
-    compile 'com.ibm.mobilefirstplatform.clientsdk.android:analytics:1.+'
+    compile 'com.ibm.mobilefirstplatform.clientsdk.android:analytics:1.1.0'
     testCompile 'junit:junit:4.12'
 
 }
