fix for issue #10

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,35 @@ src/main/res/drawable-w10dp/
 build
 chatbot-watson-android.iml
 local.properties
+/.idea/
+.idea/libraries/analytics_1_1_10.xml
+.idea/libraries/analyticsapi_1_1_1.xml
+.idea/libraries/android_sdk_0_2_3.xml
+.idea/libraries/animated_vector_drawable_24_1_1.xml
+.idea/libraries/appcompat_v7_24_1_1.xml
+.idea/libraries/commons_lang3_3_4.xml
+.idea/libraries/core_2_2_7.xml
+.idea/libraries/design_24_1_1.xml
+.idea/libraries/espresso_core_2_2_2.xml
+.idea/libraries/espresso_idling_resource_2_2_2.xml
+.idea/libraries/exposed_instrumentation_api_publish_0_5.xml
+.idea/libraries/gson_2_8_0.xml
+.idea/libraries/hamcrest_core_1_3.xml
+.idea/libraries/hamcrest_integration_1_3.xml
+.idea/libraries/hamcrest_library_1_3.xml
+.idea/libraries/javawriter_2_1_1.xml
+.idea/libraries/javax_annotation_api_1_2.xml
+.idea/libraries/javax_inject_1.xml
+.idea/libraries/jersey_jsr166e_2_22_2.xml
+.idea/libraries/jna_4_2_2.xml
+.idea/libraries/jsr305_2_0_1.xml
+.idea/libraries/junit_4_12.xml
+.idea/libraries/okhttp_2_7_4.xml
+.idea/libraries/okhttp_ws_3_4_2.xml
+.idea/libraries/recyclerview_v7_24_1_1.xml
+.idea/libraries/rules_0_5.xml
+.idea/libraries/runner_0_5.xml
+.idea/libraries/support_annotations_24_1_1.xml
+.idea/libraries/support_v4_24_1_1.xml
+.idea/libraries/support_vector_drawable_24_1_1.xml
+/app/src/main/res/values/config.xml
