--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,16 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.1'
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.example.vmac.chatbot"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -28,17 +29,18 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.0.0'
-    compile 'com.android.support:recyclerview-v7:26.0.0'
-    compile 'com.android.support:design:26.0.0'
-    compile 'com.squareup.okhttp3:okhttp:3.8.0'
-    compile 'com.squareup.okhttp3:okhttp-ws:3.4.2'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.ibm.watson.developer_cloud:conversation:3.8.0'
-    compile 'com.ibm.watson.developer_cloud:text-to-speech:3.8.0'
-    compile 'com.ibm.watson.developer_cloud:speech-to-text:3.8.1-SNAPSHOT'
-    compile 'com.ibm.watson.developer_cloud:android-sdk:0.4.2'
-    compile 'com.ibm.mobilefirstplatform.clientsdk.android:analytics:1.1.0'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:26.0.0'
+    implementation 'com.android.support:recyclerview-v7:26.0.0'
+    implementation 'com.android.support:design:26.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.ibm.watson.developer_cloud:conversation:4.2.1'
+    implementation 'com.ibm.watson.developer_cloud:text-to-speech:4.2.1'
+    implementation 'com.ibm.watson.developer_cloud:speech-to-text:4.2.1'
+    implementation 'com.ibm.watson.developer_cloud:android-sdk:0.4.3'
+    implementation 'com.ibm.mobilefirstplatform.clientsdk.android:analytics:1.1.0'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.google.android.gms:play-services:10.0.1'
+    implementation 'com.android.support:multidex:1.0.1'
 
 }
