--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,7 @@ android:
     - extra-android-m2repository
 script:
    - ./gradlew build
+licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
