--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ android:
   - android-sdk-preview-license-.+
   - android-sdk-license-.+
   - google-gdk-license-.+
+before_install:
+  - yes | sdkmanager "platforms;android-27"
 script:
    - ./gradlew build
 
