--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:appcompat-v7:26.0.0'
@@ -34,10 +34,10 @@ dependencies {
     implementation 'com.android.support:design:26.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.google.code.gson:gson:2.8.0'
-    implementation 'com.ibm.watson.developer_cloud:conversation:4.2.1'
-    implementation 'com.ibm.watson.developer_cloud:text-to-speech:4.2.1'
-    implementation 'com.ibm.watson.developer_cloud:speech-to-text:4.2.1'
-    implementation 'com.ibm.watson.developer_cloud:android-sdk:0.4.3'
+    implementation 'com.ibm.watson.developer_cloud:assistant:6.9.1'
+    implementation 'com.ibm.watson.developer_cloud:text-to-speech:6.9.1'
+    implementation 'com.ibm.watson.developer_cloud:speech-to-text:6.9.1'
+    implementation 'com.ibm.watson.developer_cloud:android-sdk:0.5.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.android.gms:play-services:10.0.1'
     implementation 'com.android.support:multidex:1.0.1'
